--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(fs,dir_ls)
 importFrom(fs,is_dir)
 importFrom(fs,is_file)
 importFrom(gert,git_ahead_behind)
+importFrom(gert,git_fetch)
 importFrom(gert,git_status)
 importFrom(glue,glue)
 importFrom(jsTreeR,jstree)
