document ghqc_set_config_repo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ importFrom(fs,is_file)
 importFrom(gert,git_ahead_behind)
 importFrom(gert,git_fetch)
 importFrom(gert,git_status)
+importFrom(gh,gh)
 importFrom(glue,glue)
 importFrom(jsTreeR,jstree)
 importFrom(jsTreeR,jstreeOutput)
