fix rcmdcheck notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(miniUI,miniButtonBlock)
 importFrom(miniUI,miniContentPanel)
 importFrom(miniUI,miniPage)
 importFrom(purrr,map_df)
+importFrom(rlang,.data)
 importFrom(rprojroot,find_rstudio_root_file)
 importFrom(shiny,addResourcePath)
 importFrom(shinyjs,addClass)
