--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Imports:
     rprojroot (>= 2.0.3),
     gitcreds (>= 0.1.2),
     shinyvalidate,
-    xml2
+    xml2,
+    DT
 Suggests: 
     testthat (>= 3.0.0),
     httptest,
