--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(ghqc_assign_app)
 export(ghqc_record_app)
 export(ghqc_resolve_app)
 export(ghqc_set_config_repo)
+export(ghqc_status_app)
+import(dplyr)
+import(purrr)
 import(shiny)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,case_when)
