--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,17 +10,22 @@ import(purrr)
 import(shiny)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,case_when)
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
 importFrom(dplyr,tibble)
+importFrom(dplyr,transmute)
 importFrom(fs,dir_exists)
 importFrom(fs,dir_ls)
 importFrom(fs,is_dir)
 importFrom(fs,is_file)
-importFrom(gert,git_ahead_behind)
-importFrom(gert,git_fetch)
 importFrom(gert,git_status)
 importFrom(gh,gh)
 importFrom(glue,glue)
+importFrom(htmltools,HTML)
+importFrom(htmltools,htmlEscape)
 importFrom(jsTreeR,jstree)
 importFrom(jsTreeR,jstreeOutput)
 importFrom(jsTreeR,renderJstree)
@@ -33,6 +38,7 @@ importFrom(miniUI,miniButtonBlock)
 importFrom(miniUI,miniContentPanel)
 importFrom(miniUI,miniPage)
 importFrom(purrr,map_df)
+importFrom(purrr,map_dfr)
 importFrom(rlang,.data)
 importFrom(rprojroot,find_rstudio_root_file)
 importFrom(shiny,addResourcePath)
@@ -44,6 +50,11 @@ importFrom(shinyjs,removeClass)
 importFrom(shinyjs,useShinyjs)
 importFrom(shinyvalidate,InputValidator)
 importFrom(shinyvalidate,sv_required)
+importFrom(stringr,str_extract)
+importFrom(tibble,tibble)
+importFrom(tidyr,separate_rows)
+importFrom(tools,file_path_sans_ext)
+importFrom(utils,zip)
 importFrom(waiter,Waiter)
 importFrom(waiter,spin_1)
 importFrom(waiter,spin_2)
